--- a/src/Components/Auth.css
+++ b/src/Components/Auth.css
@@ -11,6 +11,13 @@
     align-items: center;
     min-height: 100vh;
     background-color: #25252b;
+    overflow-y: hidden;
+}
+
+@property --a{
+    syntax: '<angle>';
+    inherits: false;
+    initial-value: 0deg;
 }
 
 .box{
@@ -19,6 +26,14 @@
     justify-content: center;
     align-items: center;
     border-radius: 20px;
+}
+
+.box::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    
 }
 
 .login {
